@@ -65,6 +65,7 @@ following names for their contribution to the product.
 * Tom Gries
 * Trevor Parscal
 * Victor Vasiliev
+* Yesid Carrillo
 * Yuri Astrakhan
 
 == Patch Contributors ==
